# blogger-migration-poc

./: .buildinfo  .gitignore  Makefile  README.md  blog.html  genindex.html  index.html  latest.html  objects.inv  pyproject.toml  search.html  searchindex.js
.doctrees/: index.doctree  latest.doctree
.github/workflows/: docs.yml
_sources/: index.rst.txt  latest.rst.txt
blog/: 2006.html  2007.html  2008.html  2009.html  2010.html  2011.html  2012.html  2013.html  2014.html  2015.html  2016.html  2017.html  2018.html  2019.html  2020.html  2021.html  2022.html  2023.html  2024.html  archive.html  author.html  category.html  drafts.html  language.html  location.html  tag.html
blog/author/: psf.html
blog/category/: legacy.html
blog/language/: en.html
blog/location/: world.html
blog/tag/: 2012.html  ads.html  advocacy.html  africa.html  aid.html  arkansas.html  asia-pacific.html  assistance.html  associate.html  australia.html  award.html  bbc.html  board-of-directors.html  board.html  brochure.html  buildbot.html  c.html  calendar.html  call-for-proposals.html  call.html  canada.html  caribbean.html  children.html  codeofconduct.html  coding-literacy.html  community-service-awards.html  community.html  conduct.html  conference.html  conferences.html  continuous-integration.html  contributions.html  cpython.html  csa.html  cuba.html  deadlines.html  democracy.html  development.html  director.html  distinctive-service-award.html  (+118 more)
docs/: conf.py
posts/2006/: 2006-03-announcing-new-psf-weblog.html  (+38 more)
tools/: convert.sh  date.sh  migrate.py  sphinxify.py
(+1927 files in other folders)
