[project]
name = "blogger-migrate"
version = "0.1.0"
description = "Migrate 'da Blogs"
authors = [
    { name = "Jacob Coffee", email = "jacob@python.org" }
]
dependencies = [
    "sphinx>=7.4.7",
    "sphinx-autobuild>=2024.4.16",
    "shibuya>=2024.7.13",
    "ablog>=0.11.10",
    "typer>=0.12.3",
    "feedparser>=6.0.11",
    "pyyaml>=6.0.1",
    "pandoc>=2.3",
    "sphinx-copybutton>=0.5.2",
    "sphinx-toolbox>=3.7.0",
    "sphinx-design>=0.6.0",
    "beautifulsoup4>=4.12.3",
    "html2text>=2024.2.26",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.5.4",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/blogger_migrate"]
